# tbd.rs

./: Cargo.toml  DRAFT_NOTES.md  LICENSE  README.md  TODO.md
mini-exec/: Cargo.toml
mini-exec/src/: lib.rs
src/: main.rs  mini_exec.rs  query.rs  types.rs
tbd-core/: Cargo.toml
tbd-core/src/: changeset.rs  execute.rs  fieldset.rs  gateway.rs  lib.rs  lifecycle.rs  mini_exec.rs  model_wrappers.rs  query.rs  relation.rs  relationships.rs  repository.rs  streaminto.rs  transaction.rs  types.rs
tbd-fieldset/: Cargo.toml
tbd-fieldset/src/: lib.rs
tbd-gateway/: Cargo.toml
tbd-gateway/src/: lib.rs  transaction.rs
tbd-key/: Cargo.toml
tbd-key/src/: lib.rs
tbd-keyed/: Cargo.toml
tbd-keyed/src/: lib.rs
tbd-lifecycle/: Cargo.toml
tbd-lifecycle/src/: lib.rs
tbd-memory/: Cargo.toml
tbd-memory/src/: main.rs
tbd-model-wrappers/: Cargo.toml
tbd-query/: Cargo.toml
tbd-query/src/: compile.rs  lib.rs
tbd-query/tests/: generate.rs
tbd-query/tests/schema/: mod.rs
tbd-relation/: Cargo.toml
tbd-relation/src/: fieldset.rs  lib.rs
tbd-sqlite3/: Cargo.toml
tbd-sqlite3/examples/: blog.rs
tbd-sqlite3/examples/models/: comment.rs  post.rs
tbd-sqlite3/examples/schema/: mod.rs
tbd-sqlite3/src/: lib.rs  main.rs
tbd-test/: Cargo.toml
tbd-test/src/: main.rs
tbd-timestamped/: Cargo.toml
