[package]
name = "tbd-query"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]
edition = "2018"

[dependencies]
tbd-relation = { path = "../tbd-relation" }
tbd-gateway = { path = "../tbd-gateway" }
tbd-fieldset = { path = "../tbd-fieldset" }

[dev-dependencies]
tbd-model-wrappers = { path = "../tbd-model-wrappers" }
tbd-keyed = { path = "../tbd-keyed" }
tbd-lifecycle = { path = "../tbd-lifecycle" }