[package]
name = "tbd-relation"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]
edition = "2018"

[dependencies]
tbd-fieldset = { path = "../tbd-fieldset" }
tbd-model-wrappers = { path = "../tbd-model-wrappers" }
tbd-lifecycle = { path = "../tbd-lifecycle" }
tbd-key = { path = "../tbd-key" }
