[package]
name = "tbd-sqlite3"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]
edition = "2018"

[dependencies]
tbd-core = { path = "../tbd-core" }
tbd-keyed = { path = "../tbd-keyed" }
mini-exec = { path = "../mini-exec" }
rusqlite = "0.14.0"
futures-preview = "0.3.0-alpha.6"
byteorder = "1"
